@@ -205,7 +205,14 @@
                             <onclick>Skin.ToggleSetting(HideSubmenuWidget)</onclick>
                         </control>
 
-                        
+                        <control type="button" id="9271" description="Startup Video">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9101)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>31168</label>
+                            <label2>$INFO[Skin.String(StartupPlaylist)]</label2>
+                            <onclick condition="String.IsEmpty(Skin.String(StartupPlaylist))">Skin.SetFile(StartupPlaylist,.mp4|.avi|.mkv|.xvid|.wmv|.mov|.xsp|.mp3|.wma|.flac|.m3u)</onclick>
+                            <onclick condition="!String.IsEmpty(Skin.String(StartupPlaylist))">Skin.Reset(StartupPlaylist)</onclick>
+                        </control>
 
                         <!-- ========== -->
                         <!-- Background -->
@@ -558,14 +565,6 @@
                         <!-- ============= -->
                         <!-- Miscellaneous -->
                         <!-- ============= -->
-                        <control type="button" id="9271" description="Startup Video">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>31168</label>
-                            <label2>$INFO[Skin.String(StartupPlaylist)]</label2>
-                            <onclick condition="String.IsEmpty(Skin.String(StartupPlaylist))">Skin.SetFile(StartupPlaylist,.mp4|.avi|.mkv|.xvid|.wmv|.mov|.xsp|.mp3|.wma|.flac|.m3u)</onclick>
-                            <onclick condition="!String.IsEmpty(Skin.String(StartupPlaylist))">Skin.Reset(StartupPlaylist)</onclick>
-                        </control>
 
                         <control type="button" id="9274" description="Customise Shutdown Menu">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
@@ -628,6 +627,14 @@
                             <label>$LOCALIZE[31042]</label>
                             <selected>!Skin.HasSetting(DisableViewText)</selected>
                             <onclick>Skin.ToggleSetting(DisableViewText)</onclick>
+                        </control>
+
+                        <control type="radiobutton" id="9892" description="Disable plot outline">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31307]</label>
+                            <selected>!Skin.HasSetting(DisablePlotOutline)</selected>
+                            <onclick>Skin.ToggleSetting(DisablePlotOutline)</onclick>
                         </control>
 
                         <control type="button" id="9279" description="Enable viewmodes">
