@@ -2,6 +2,7 @@
 Hopeful fix for widgets bug
 Characterart plus Awards on info
 Add slideshow ability in videoinfo
+Use plot outline option
 
 [B]0.9.9[/B]
 Add FPS icon and indicator on videoosd info
